<resources>
    <string name="app_name">Monedas de Paises</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="nombre_moneda">Nombre Moneda</string>
    <string name="pais_moneda">Pais Moneda</string>
    <string name="Pais">Pais a Registrat</string>
    <string name="Moneda">Moneda a registrar</string>
    <string name="ValorenDolar">Valor en dolar</string>
    <string name="Disponibilidad">available</string>
    <string name="submit">Submit</string>
    <string name="moneda_a_registrar">Moneda a Registrar</string>
</resources>
